--- a/src/app.scss
+++ b/src/app.scss
@@ -1,9 +1,35 @@
-h1 {
-  color: red;
-  border: 1px solid #ccc;
-  transition: all ease 0.3s;
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
 
-h1:hover {
-  margin-top: 200px;
+.app {
+  font-size: 1.5rem;
+  text-align: center;
+
+  header {
+    padding: 60px 0 70px;
+    color: #fff;
+    background: #282c34;
+
+    img {
+      height: 5rem;
+      animation: loading 5s linear infinite;
+
+      @keyframes loading {
+        from {
+          transform: rotate(0);
+        }
+
+        to {
+          transform: rotate(360deg);
+        }
+      }
+    }
+  }
+
+  code {
+    color: red;
+  }
 }
